# winpaint-linux

./: .gitignore  GITHUB.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  winpaint
docs/: INSTALL.md  README.es.md
src/: main.py
src/canvas/: drawing_area.py  history.py
src/canvas/tools/: __init__.py  base_tool.py  brush.py  ellipse.py  eraser.py  fill.py  line.py  pencil.py  rectangle.py  select.py  select_free.py  text.py
src/core/: clipboard.py  constants.py  image.py  selection.py
src/ui/: color_box.py  main_window.py  menubar.py  resize_handle.py  statusbar.py  toolbox.py
src/utils/: helpers.py
tests/: test_canvas.py  test_tools.py
